--- a/02_Demand_Estimation/output/chap3_data_summary.tex
+++ b/02_Demand_Estimation/output/chap3_data_summary.tex
@@ -1,19 +1,24 @@
-% latex table generated in R 4.4.1 by xtable 1.8-4 package
-% Thu Jul  4 14:34:32 2024
-\begin{table}[ht]
+\begin{table}
 \centering
-\begin{tabular}{rrrrrrrr}
-  \hline
- & Mean & Std.Dev & Min & Q1 & Median & Q3 & Max \\ 
-  \hline
-Sales & 24586.39 & 40195.27 & 10.00 & 2958.00 & 8544.00 & 27404.00 & 317675.00 \\ 
-  price & 2.53 & 1.83 & 0.71 & 1.42 & 2.05 & 2.87 & 12.63 \\ 
-  FuelEfficiency & 16.16 & 5.55 & 5.50 & 12.00 & 15.40 & 19.40 & 40.80 \\ 
-  size & 11.51 & 2.48 & 5.91 & 9.58 & 11.47 & 13.04 & 19.15 \\ 
-  hppw & 0.10 & 0.04 & 0.04 & 0.08 & 0.09 & 0.11 & 0.32 \\ 
-  capacity\_d & 0.71 & 0.45 & 0.00 & 0.00 & 1.00 & 1.00 & 1.00 \\ 
-  FuelRegular\_d & 0.74 & 0.44 & 0.00 & 0.00 & 1.00 & 1.00 & 1.00 \\ 
-  Foreign\_d & 0.12 & 0.32 & 0.00 & 0.00 & 0.00 & 0.00 & 1.00 \\ 
-   \hline
+\begin{tabular}{l|c|c|c|c|c|c|c}
+\hline
+  & Mean & Std.Dev & Min & Q1 & Median & Q3 & Max\\
+\hline
+Sales & 24586.39 & 40195.27 & 10.00 & 2958.00 & 8544.00 & 27404.00 & 317675.00\\
+\hline
+price & 2.53 & 1.83 & 0.71 & 1.42 & 2.05 & 2.87 & 12.63\\
+\hline
+FuelEfficiency & 16.16 & 5.55 & 5.50 & 12.00 & 15.40 & 19.40 & 40.80\\
+\hline
+size & 11.51 & 2.48 & 5.91 & 9.58 & 11.47 & 13.04 & 19.15\\
+\hline
+hppw & 0.10 & 0.04 & 0.04 & 0.08 & 0.09 & 0.11 & 0.32\\
+\hline
+capacity\_d & 0.71 & 0.45 & 0.00 & 0.00 & 1.00 & 1.00 & 1.00\\
+\hline
+FuelRegular\_d & 0.74 & 0.44 & 0.00 & 0.00 & 1.00 & 1.00 & 1.00\\
+\hline
+Foreign\_d & 0.12 & 0.32 & 0.00 & 0.00 & 0.00 & 0.00 & 1.00\\
+\hline
 \end{tabular}
 \end{table}
