--- a/01_Discrete_Choice/KT_2024_discretechoice.Rmd
+++ b/01_Discrete_Choice/KT_2024_discretechoice.Rmd
@@ -542,6 +542,21 @@ result <- optimx( par = ini,
 # 推定値の取得
 est_vec <- as.numeric(result[1,1:3])
 ```
+　以下が推定されたパラメタである。パッケージによる推定に近い値となっていることがわかる。
+```{r}
+# パッケージの推定値
+est_vec_package <- ml$coefficients
+names(est_vec) <- c(attr(ml$coefficients, "names"))
+# 比較
+print(rbind(est_vec, est_vec_package ))
+```
+　また、以下が対数尤度である。こちらもほとんど変わらないことが見て取れる。
+```{r}
+loglik_ml <- result[4]$value
+loglik_ml_package <- as.numeric(ml$logLik)
+print(rbind(loglik_ml, loglik_ml_package))
+```
+
 　ヘシアンから標準誤差を得る。
 ```{r}
 #　ヘシアンの計算
@@ -550,8 +565,9 @@ Hessian <- gHgen(par = as.numeric(result[1,1:3]),
                  data = data_for_estimation)
 se_vec <- round(sqrt(diag(solve(-Hessian$Hn))), 3)
 ```
-　以下がスクラッチで求めたロジットモデルの解である。上記のmlogitで求めた値とほとんど同じである。
+　以下に推定値と標準誤差を並べて示す。
 ```{r}
+
 print(rbind(est_vec, se_vec))
 ```
 ## ロジットモデル(消費者属性入り)
@@ -590,7 +606,7 @@ f_logit_prob_with_atr <- function(alpha_Kinoko, alpha_Takenoko, beta, price_Kino
 ```{r}
 f_likelihood_logit_with_atr <- function(param, data){
   # 空のデータフレーム
-  pred <- data.frame(matrix(ncol = 3, nrow = 1180))
+  pred <- matrix(ncol = 3, nrow = 1180)
   colnames(pred) <- c("prob_Kinoko", "prob_Takenoko","prob_Other")
   ID <- numeric(236)
   atr <- numeric(5)
@@ -624,6 +640,7 @@ f_likelihood_logit_with_atr <- function(param, data){
   pred[(5*(i-1)+5),] <- P5
   ID[(5*(i-1)+1):(5*(i-1)+5)] <- rep(data$ID[(5*(i-1)+1)], 5)
   }
+  pred <- as.data.frame(pred)
   # IDと設問(マージ用)
   pred$ID<- ID
   pred$occasion <- rep(c("Q1", "Q2", "Q3", "Q4", "Q5"), 236)
@@ -644,8 +661,7 @@ f_likelihood_logit_with_atr <- function(param, data){
 }
 
 ```
-
- 初期値を与えて最適化を行う。
+　初期値を与えて最適化を行う。
 ```{r}
 # 初期パラメタ
 # おおざっぱに決めた初期値
@@ -661,21 +677,15 @@ result_with_atr <- optimx( par = ini,
                   hessian = TRUE  )
 
 # 推定値の取得
- est_vec <- as.numeric(result_with_atr[1,1:18])
+ est_vec_ml_atr <- as.numeric(result_with_atr[1,1:18])
 
 ```
-　推定された値は以下である。
-```{r}
-# 推定されたパラメタ。
-
-print(est_vec)
-```
-　mlogitパッケージによる推定値と比べると以下のようになっている。概ね近い値となっている。
+　推定された値をmlogitパッケージによる推定値と比べると以下のようになっており、概ね近い値となっている。
 ```{r}
 # パッケージでの推定値:
-est_vec_pack <- ml_consumer_atr$coefficients[1:18]
+est_vec_package_ml_atr <- ml_consumer_atr$coefficients[1:18]
 # 比較 やや差があるが概ね同じ
-print(rbind(est_vec, est_vec_pack))
+print(rbind(est_vec_ml_atr, est_vec_package_ml_atr))
 ```
 
 　
@@ -683,8 +693,9 @@ print(rbind(est_vec, est_vec_pack))
 　対数尤度で見ても概ね等しい。
 ```{r}
 # 対数尤度はそれぞれこのようになっている。
-print(result_with_atr[19]$value)
-ml_consumer_atr$logLik
+loglik_ml_atr <- result_with_atr[19]$value
+loglik_ml_atr_package <-as.numeric(ml_consumer_atr$logLik)
+print(rbind(loglik_ml_atr, loglik_ml_atr_package))
 ```
 　標準誤差を算出する。
 ```{r}
@@ -692,11 +703,12 @@ ml_consumer_atr$logLik
 Hessian <- gHgen(par = as.numeric(result_with_atr[1,1:18]), 
                  fn = f_likelihood_logit_with_atr, 
                  data = data_for_estimation_with_atr)
-se_vec <- round(sqrt(diag(solve(-Hessian$Hn))), 3)
+se_vec_ml_atr <- round(sqrt(diag(solve(-Hessian$Hn))), 3)
 ```
 　推定値と標準誤差を並べたものを以下に示す。
 ```{r}
-print(rbind(est_vec, se_vec))
+names(est_vec_ml_atr) = c(attr(ml_consumer_atr$coefficients, "names"))
+print(rbind(est_vec_ml_atr, se_vec_ml_atr))
 ```
 
 ## ランダム係数ロジット(消費者属性無し)
@@ -720,7 +732,9 @@ f_rcdclogit_prob <- function(alpha_Kinoko, alpha_Takenoko, beta, price_Kinoko, p
   return( cbind(prob_Kinoko, prob_Takenoko, prob_Other))
 }
 ```
+　計算時間節約のために、以下でドローをあらかじめ用意する。
 ```{r}
+# 事前にドローを用意する
 # ドロー回数
 times_draw =1000
 # 乱数の格納用
@@ -748,6 +762,8 @@ f_likelihood_rcdclogit <- function(param, data){
   sigma_Kinoko <- param[5]
   sigma_Takenoko <- param[6]
   
+  repID <- c(data$ID)
+  
 
 # 各回答者の選択確率を予測する
   for(i in 1:236){
@@ -766,7 +782,7 @@ f_likelihood_rcdclogit <- function(param, data){
   pred[(5*(i-1)*(times_draw)+3*times_draw+1):(5*(i-1)*(times_draw)+4*times_draw),] <- P4
   pred[(5*(i-1)*(times_draw)+4*times_draw+1):(5*(i-1)*(times_draw)+5*times_draw),] <- P5
   # 各回答者の固有のIDをあらかじめ用意しておく。
-  ID[(5*(i-1)*(times_draw)+1):(5*(i-1)*(times_draw)+5*times_draw)] <- rep(data$ID[(5*(i-1)+1)], 5*times_draw)
+  ID[(5*(i-1)*(times_draw)+1):(5*(i-1)*(times_draw)+5*times_draw)] <- rep(repID[(5*(i-1)+1)], 5*times_draw)
   
   }
   pred<- as.data.frame(pred)
@@ -795,7 +811,6 @@ f_likelihood_rcdclogit <- function(param, data){
 
 }
 ```
-　
 　推定を行う。
 ```{r, cache = TRUE}
 # おおざっぱに選んだ初期値
@@ -817,9 +832,11 @@ est_vec_package_rcdc <- rcdc$coefficients[1:6]
 # 比較
 print(rbind(est_vec_rcdc, est_vec_package_rcdc))
 ```
-　対数尤度を以下に示す。
+　対数尤度を以下に示す。こちらも概ね同じである。
 ```{r}
-result_rcdc[7]$value
+loglik_rcdc <- result_rcdc[7]$value
+loglik_rcdc_package <- as.numeric(rcdc$logLik)
+print(rbind(loglik_rcdc, loglik_rcdc_package))
 ```
 　標準誤差を算出する。
 ```{r}
@@ -827,12 +844,161 @@ result_rcdc[7]$value
 Hessian <- gHgen(par = as.numeric(result_rcdc[1,1:6]), 
                  fn = f_likelihood_rcdclogit, 
                  data = data_for_estimation_with_atr)
-se_vec <- round(sqrt(diag(solve(-Hessian$Hn))), 3)
+se_vec_rcdc <- round(sqrt(diag(solve(-Hessian$Hn))), 3)
 ```
 　推定値と標準誤差を並べたものを以下に示す。
 ```{r}
-print(rbind(est_vec_rcdc, se_vec))
+names(est_vec_rcdc) = c(attr(rcdc$coefficients, "names"))
+print(rbind(est_vec_rcdc, se_vec_rcdc))
 ```
-　
+## ランダム係数ロジット(消費者属性入り)
+　次に、消費者属性入りのランダム係数ロジットをスクラッチで推定する。消費者属性を含める以外は、先ほどの属性なしのものと変わらない。
 
+
+　まず、以下で選択確率を定義する。
+```{r}
+
+f_rcdclogit_prob_with_atr <- function(alpha_Kinoko, alpha_Takenoko, beta, price_Kinoko, price_Takenoko, param_atr_Kinoko,param_atr_Takenoko, param_atr_price, atr, sigma_Kinoko, sigma_Takenoko, sigma_price, tau){
+# きのこ、たけのこから得られるそれぞれの効用の算出
+# sigma_〇〇は各パラメタの標準偏差、tauは標準正規分布に従う乱数を(ドロー回数)行×3列発生させたもの
+  alpha_Kinoko_draw <- alpha_Kinoko + sigma_Kinoko*tau[, 1]
+  alpha_Takenoko_draw <- alpha_Takenoko + sigma_Takenoko*tau[, 2]
+  beta_draw <- beta + sigma_price*tau[, 3]
+  util_Kinoko <- alpha_Kinoko_draw + sum(param_atr_Kinoko*atr) - price_Kinoko*(beta_draw +  sum(param_atr_price*atr))
+  util_Takenoko <- alpha_Takenoko_draw + sum(param_atr_Takenoko*atr) - price_Takenoko*(beta_draw +  sum(param_atr_price*atr))
+# 選択確率の算出
+  prob_Kinoko <- exp( util_Kinoko ) / ( 1 + exp( util_Kinoko ) + exp( util_Takenoko ))
+  prob_Takenoko <- exp( util_Takenoko ) / ( 1 + exp( util_Kinoko ) + exp( util_Takenoko ))
+  prob_Other <- 1 - (prob_Kinoko + prob_Takenoko)
+
+  return( cbind(prob_Kinoko, prob_Takenoko, prob_Other))
+}
+```
+```{r}
+# ドロー回数
+times_draw =1000
+# 乱数の格納用
+tau<- matrix(nrow = times_draw*236, ncol = 3)
+for(i in 1:236){
+  set.seed(500+i)
+# 回答者iがドローする乱数
+  tau[(times_draw*(i-1)+1):(times_draw*i), 1] <- rnorm(times_draw, mean = 0, sd = 1)
+  tau[(times_draw*(i-1)+1):(times_draw*i), 2] <- rnorm(times_draw, mean = 0, sd = 1)
+  tau[(times_draw*(i-1)+1):(times_draw*i), 3] <- rnorm(times_draw, mean = 0, sd = 1)}
+```
+
+
+　以下で対数尤度を算出する。
+```{r}
+f_likelihood_rcdclogit_with_atr <- function(param, data){
+  # 空のデータフレーム
+  pred <- matrix(ncol = 3, nrow = 1180*times_draw)
+  colnames(pred) <- c("prob_Kinoko", "prob_Takenoko","prob_Other")
+  ID <- numeric(236*times_draw)
+  atr <- numeric(5)
+  beta <- param[1]
+  alpha_Kinoko <- param[2]
+  alpha_Takenoko <- param[3]
+  sigma_price <- param[4]
+  sigma_Kinoko <- param[5]
+  sigma_Takenoko <- param[6]
+  param_atr_Kinoko <- param[c(9, 12, 15, 20, 21)]
+  param_atr_Takenoko <- param[c(8, 11, 14, 18, 19)]
+  param_atr_price <- param[c(7, 10, 13, 16, 17)]
+  repID <- c(data$ID)
+  
+
+# 各回答者の選択確率を予測する
+  for(i in 1:236){
+  gender <- data$gender[(5*(i-1)+1)]
+  familyhouse <- data$familyhouse[(5*(i-1)+1)]
+  adult <- data$adult[(5*(i-1)+1)]
+  kansai <- data$kansai[(5*(i-1)+1)]
+  oversea <- data$oversea[(5*(i-1)+1)]
+  atr[1:5] <- c(gender, familyhouse, adult, kansai, oversea)
+  
+# 各選択フェーズでのドロー回数分の選択確率を予測
+  P1 <- f_rcdclogit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 200, 200, param_atr_Kinoko,param_atr_Takenoko, param_atr_price, atr, sigma_Kinoko, sigma_Takenoko, sigma_price, tau[(times_draw*(i-1)+1):(times_draw*i), ])
+  P2 <- f_rcdclogit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 180, 200, param_atr_Kinoko,param_atr_Takenoko, param_atr_price, atr, sigma_Kinoko, sigma_Takenoko, sigma_price, tau[(times_draw*(i-1)+1):(times_draw*i), ])
+  P3 <- f_rcdclogit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 200, 170, param_atr_Kinoko,param_atr_Takenoko, param_atr_price, atr, sigma_Kinoko, sigma_Takenoko, sigma_price, tau[(times_draw*(i-1)+1):(times_draw*i), ])
+  P4 <- f_rcdclogit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 220, 200, param_atr_Kinoko,param_atr_Takenoko, param_atr_price, atr, sigma_Kinoko, sigma_Takenoko, sigma_price, tau[(times_draw*(i-1)+1):(times_draw*i), ])
+  P5 <- f_rcdclogit_prob_with_atr(alpha_Kinoko, alpha_Takenoko, beta, 190, 210, param_atr_Kinoko,param_atr_Takenoko, param_atr_price, atr, sigma_Kinoko, sigma_Takenoko, sigma_price, tau[(times_draw*(i-1)+1):(times_draw*i), ])
+  # 各設問ごとのドロー回数分の選択確率を格納
+  pred[(5*(i-1)*(times_draw)+1):(5*(i-1)*(times_draw)+times_draw),] <- P1
+  pred[(5*(i-1)*(times_draw)+times_draw+1):(5*(i-1)*(times_draw)+2*times_draw),] <- P2
+  pred[(5*(i-1)*(times_draw)+2*times_draw+1):(5*(i-1)*(times_draw)+3*times_draw),] <- P3
+  pred[(5*(i-1)*(times_draw)+3*times_draw+1):(5*(i-1)*(times_draw)+4*times_draw),] <- P4
+  pred[(5*(i-1)*(times_draw)+4*times_draw+1):(5*(i-1)*(times_draw)+5*times_draw),] <- P5
+  # 各回答者の固有のIDをあらかじめ用意しておく。
+  ID[(5*(i-1)*(times_draw)+1):(5*(i-1)*(times_draw)+5*times_draw)] <- rep(repID[(5*(i-1)+1)], 5*times_draw)
+  
+  }
+  pred<- as.data.frame(pred)
+  # IDと設問、ドローフェーズ(マージ用)
+  pred$ID<- ID
+  pred$occasion <- rep(rep(c("Q1", "Q2", "Q3", "Q4", "Q5"), each = times_draw), 236)
+  pred$draw_phase <- rep(c(1:times_draw), 5*236)
+  # 各選択フェーズに対する実際の選択と、予測された選択確率を対応させる
+  data %>%
+    left_join(pred, by = c("ID","occasion")) %>%
+    mutate( choice_prob = case_when( choice == 0 ~ prob_Other,
+                                     choice == 1 ~ prob_Kinoko,
+                                     choice == 2 ~ prob_Takenoko) ) %>%
+    group_by(ID, draw_phase) %>%　# 各回答者の設問1～5への選択の組み合わせが実現する確率を各ドローフェーズごとに算出。
+    summarise(joint_by_draw = prod(choice_prob),.groups = "drop") %>%
+    group_by(ID) %>% # 算出した確率を各回答者ごとに平均する。
+    summarise(mean_joint_prob=mean(joint_by_draw), .groups = "drop") %>%　
+    mutate(log_choice_joint_prob = log(mean_joint_prob)) %>%
+    select(log_choice_joint_prob) -> result
+
+
+    # 和を取って対数尤度を計算する
+  likelihood <- sum(result)
+
+   return(likelihood)
+
+}
+```
+　対数尤度を最大化する。
+```{r}
+# おおざっぱに選んだ初期値
+ini_rcdc_with_atr <- c(0.6, 20, 20, 0.1, 1, 1, 0, 3, 3, 0, 0, 0, 0, -3, -3, 0, 0, 1, 1, 1, 1 )
+# 最大化(1時間30分)
+result_rcdc_with_atr <- optimx( par = ini_rcdc_with_atr, 
+                  fn = f_likelihood_rcdclogit_with_atr, 
+                  method="BFGS", 
+                  data = data_for_estimation_with_atr, 
+                  control = list(fnscale=-1), 
+                  hessian = TRUE)
+
+est_vec_rcdc_with_atr <- as.numeric(result_rcdc_with_atr[1,1:21])
+```
+
+
+　以下が推定されたパラメタである。パッケージによる推定に近い値となっていることがわかる。
+```{r}
+# パッケージの推定値
+est_vec_package_rcdc_with_atr <- rcdc_consumer_atr$coefficients[c(1:3,19:21,4:18)]
+names(est_vec_rcdc_with_atr) <- c(attr(rcdc_consumer_atr$coefficients, "names")[c(1:3,19:21,4:18)])
+# 比較
+print(rbind(est_vec_rcdc_with_atr, est_vec_package_rcdc_with_atr))
+```
+　対数尤度を以下に示す。
+```{r}
+loglik_rcdc_atr <- result_rcdc_with_atr[22]$value
+loglik_rcdc_atr_package <- as.numeric(rcdc_consumer_atr$logLik)
+print(rbind(loglik_rcdc_atr, loglik_rcdc_atr_package))
+```
+　標準誤差を算出する。
+```{r}
+#　ヘシアンの計算
+Hessian <- gHgen(par = as.numeric(result_rcdc_with_atr[1,1:21]), 
+                 fn = f_likelihood_rcdclogit_with_atr, 
+                 data = data_for_estimation_with_atr)
+se_vec_with_atr <- round(sqrt(diag(solve(-Hessian$Hn))), 3)
+```
+　推定値と標準誤差を並べたものを以下に示す。
+```{r}
+print(rbind(est_vec_rcdc_with_atr, se_vec_with_atr))
+```
 
