--- a/02_Demand_Estimation/output/chap3_data_summary.tex
+++ b/02_Demand_Estimation/output/chap3_data_summary.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\begin{tabular}{l|c|c|c|c|c|c|c}
+\begin{tabular}{l|l|c|c|c|c|c|c}
 \hline
   & Mean & Std.Dev & Min & Q1 & Median & Q3 & Max\\
 \hline
