--- a/02_Demand_Estimation/output/chap4_blp.tex
+++ b/02_Demand_Estimation/output/chap4_blp.tex
@@ -2,7 +2,7 @@
 \centering
 \caption{\label{tab:unnamed-chunk-19}Estimates of The Parameters}
 \centering
-\begin{tabular}[t]{l|c|c}
+\begin{tabular}[t]{l|l|c}
 \hline
   & coeff & se\\
 \hline
